--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -13,6 +13,7 @@ target/
 .springBeans
 .sts4-cache
 
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+application
+Screenshot 2026-01-23 120740.png
